--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -46,7 +46,7 @@
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
             #{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
         </div>-->
-        <div class="layout-portlets-box">
+        <div class="layout-portlets-box footerContext">
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent"><div id="ceForm:j_idt277" class="ui-outputpanel ui-widget">
                     <p style="font-style: italic; font-size: .8em;">
