--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
@@ -112,7 +112,7 @@ transition: all 0.5s ease;
 	/*color: #ffffff;*/
 }
 .ui-widget-content a {
-	color: #ffffff;
+	/*color: #ffffff;*/
 }
 .ui-widget-header {
 	/*border: 1px solid #3f7506;*/
