Prashant 03/27/2017 - Email templates for TCM

--- a/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Forgot.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Forgot.html
@@ -1615,7 +1615,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="https://traditionadvisers.net/setPassword.xhtml" fix-pos data-vml-width="95" height="48"
+                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">RESET MY PASSWORD</a>
                         </div>
                     </div>
