--- a/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Locked.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Locked.html
@@ -1605,7 +1605,7 @@
                         <p>
                             For your security, we have locked your account. Please follow the prompts to create a new password. Once you have your new
                             password, you may use it to access your account and your old password will be permanently disabled.</p>
-                        <p>To reset your password, <a href="http://traditionadvisers.net/setPassword.xhtml">click here</a>.</p>
+                        <p>To reset your password, <a href="'0'">click here</a>.</p>
 
                     </div>
 
