--- a/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Welcome.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Welcome.html
@@ -1625,7 +1625,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="https://traditionadvisers.net/login.xhtml" fix-pos data-vml-width="95" height="48"
+                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">LOGIN</a>
                         </div>
                     </div>
