--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1359,3 +1359,33 @@ text-align: center;
 	margin-top: 8px!important;
 	border-radius: 0!important;
 }
+
+.advDashHeader {
+    border-bottom: 1px solid #009abb;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.staticBlock {
+    padding: 5px 5px;
+        margin: 10px 10px;
+            box-shadow: 1px 1px 4px #d6d2d2;
+}
+
+.countlabel {
+	    border-top: 1px solid #009abb;
+}
+
+.countValue, .countlabel {
+    padding: 5px 0px;
+}
+
+.BottomPos {
+	position: relative;
+	top:40px;
+}
+
+.menulabelscustomadv {
+	    margin: 0 10px;
+    font-size: 14px;
+}
