--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessenceCustom.css
@@ -4028,3 +4028,132 @@ margin: 72px 0px 0px 16px;
 	margin-top: 0px!important;
 }
 }
+
+/***uobDashboard***/
+.leftAccountInfoBlock, .rightAccountInfoBlock {
+padding: 0 10px;
+    box-sizing: border-box;
+    }
+
+.blockHeader {
+	padding: 10px 0px;
+    font-size: 14px;
+	color: #ffffff;
+	background:#666666;
+}
+
+.blockHeader span {
+  padding: 0px 10px;
+}
+
+.cellBlock {
+	float: left;
+	font-size: 13px;
+	padding: 5px 0px;
+	    margin-top: 5px;
+	border-bottom: 1px solid #f5f5f5;
+}
+
+.rowBlock {
+	    margin: 0 10px;
+}
+
+.quickBtnBlock {
+	display: grid;
+}
+
+.boxBtn {
+	    width: 70px;
+    height: 70px;
+        display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+        border: 2px solid #666666;
+    border-radius: 5px;
+}
+
+.quickBtnBlock > div{
+padding: 10px 0px;
+}
+
+.centerRelCenter {
+	text-align: -webkit-center;
+	text-align: -moz-center;
+	text-align: -o-center;
+}
+
+.centerRelRight {
+	text-align: -webkit-right;
+	text-align: -moz-right;
+	text-align: -o-right;
+}
+
+.boxBtn > i {
+	font-size: 20px;
+}
+
+.boxBtn > label {
+	font-size: 12px;
+	display: block;
+	margin: 2px 0;
+}
+
+.firstBtnBlck > .boxBtn {
+	    position: relative;
+    left: 5px;
+}
+
+.centerRelRight > .boxBtn {
+	    position: relative;
+    right: 5px;
+}
+
+.AccountInfoPanel, .AccountAssetOvwPanel {
+    box-shadow: 1px 1px 4px rgba(102, 102, 102, 0.56);
+}
+
+.extraMenuBlock {
+	display: grid;
+}
+
+.reportBtnCustom, .menuBtnCustom {
+	    width: 100%;
+    border-radius: 0px!important;
+}
+
+.reportBtnCustom > .ui-button-text {
+	 border-radius: 0px!important;
+	 background: #666666;
+}
+
+.menuBtnCustom button {
+	    width: 100%;
+    border-radius: 0px!important;
+}
+
+
+.menuBtnCustom .ui-button-text {
+	 border-radius: 0px!important;
+	 background: #666666;
+}
+
+.secondBlockEMB, .firstBlockEMB {
+	    /* padding: 0 10px; */
+    box-sizing: border-box;
+}
+
+.rowBlock .cellBlock:nth-child(1) {
+	color: #a4332f;
+}
+
+.rowBlock .cellBlock:nth-child(2), .sAdvLabel {
+    font-weight: bold;
+}
+.supportAdvBlock {
+	border-right: 5px solid #666666;
+}
+
+.supportAdvBlock div {
+	padding: 0px 5px;
+	text-align: right;
+}
