Prashant 04/102017 - Post Release fixes (Email process to send HTML templates)

--- a/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Activated.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Activated.html
@@ -1602,7 +1602,7 @@ div.preheader {
                         </div>
 
                         <h2 style="text-align: left;">
-                            Hi '5',
+                            Hi ~FIRST_NAME~,
                         </h2>
 
                        <div class="column__padding--inline">
@@ -1623,7 +1623,7 @@ div.preheader {
                     </div>
 
                     <div class="column__padding--inline">
-                        <p style="text-align: left;">Please store your User ID '2' and Password in a safe place &#8211; and remember, neither Building
+                        <p style="text-align: left;">Please store your User ID <strong>~USER_ID~</strong> and Password in a safe place &#8211; and remember, neither Building
                             Benjamins nor any of its affiliates will ever ask you to share your password with us.
                         </p>
                         <p>
@@ -1633,7 +1633,7 @@ div.preheader {
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48"
+                            <a cs-button href="~CUSTOM_LINK~" fix-pos data-vml-width="95" height="48"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">Activate</a>
                         </div>
                     </div>
