--- a/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Locked.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Locked.html
@@ -42,7 +42,7 @@
                 <!-- [if (mso)|(IE)]></td><td class="layout__edges">&nbsp;</td></tr></table><![endif]--></div>
             <div class="column__padding--inline">
                 <div class="btn btn--flat btn--large" style="text-align: center;">
-                    <a cs-button href="'0'"
+                    <a cs-button href="~CUSTOM_LINK~"
                        style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px; padding: 10px 15px; text-decoration: none; color: white;">Reset Password</a>
                 </div>
             </div>
