--- a/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
@@ -1485,7 +1485,7 @@
 
                     <div class="column__padding--inline">
                         <p style="text-align: left;">
-                            Your User ID is <strong>'2'</strong>.&nbsp; After clicking the
+                            Your User ID is <strong>~USER_ID~</strong>.&nbsp; After clicking the
                             link below, you will be asked to:
                         </p>
                         <ol>
@@ -1523,7 +1523,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align: center;">
-                            <a cs-button href="'0'"
+                            <a cs-button href="-CUSTOM_LINK-"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px; padding: 10px 15px; text-decoration: none; color: white;">Activate</a>
                         </div>
                     </div>
