--- a/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Reset.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Reset.html
@@ -1616,7 +1616,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48" style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">
+                            <a cs-button href="~CUSTOM_LINK~" fix-pos data-vml-width="95" height="48" style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">
                                 RESET MY PASSWORD</a>
                         </div>
                     </div>
