--- a/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Welcome.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/traditionadvisers-Welcome.html
@@ -1612,7 +1612,7 @@
                     </div>
 
                     <div class="column__padding--inline">
-                        <p style="text-align: left;">Your User ID is <strong>USER_ID</strong>.&nbsp;After clicking the link below, you will be asked
+                        <p style="text-align: left;">Your User ID is <strong>~USER_ID~</strong>.&nbsp;After clicking the link below, you will be asked
                             to:</p>
                         <ol>
                             <li style="text-align: left;">Enter your new password.</li>
@@ -1625,7 +1625,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align:center;">
-                            <a cs-button href="'0'" fix-pos data-vml-width="95" height="48"
+                            <a cs-button href="~CUSTOM_LINK~" fix-pos data-vml-width="95" height="48"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px;">LOGIN</a>
                         </div>
                     </div>
