--- a/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
+++ b/Invessence/modules/web/src/main/webapp/template/html/buildingbenjamins-Welcome.html
@@ -1454,7 +1454,7 @@
                             <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
                         </div>
 
-                        <h2 style="text-align: left;">Hi '5',</h2>
+                        <h2 style="text-align: left;">Hi ~FIRST_NAME~,</h2>
 
                         <div class="column__padding--inline">
                             <div style="line-height: 10px; font-size: 1px">&nbsp;</div>
@@ -1523,7 +1523,7 @@
 
                     <div class="column__padding--inline">
                         <div class="btn btn--flat btn--large" style="text-align: center;">
-                            <a cs-button href="-CUSTOM_LINK-"
+                            <a cs-button href="~CUSTOM_LINK~"
                                style="background-color: #046744; font-family: Merriweather, Georgia, serif; border-radius: 4px; padding: 10px 15px; text-decoration: none; color: white;">Activate</a>
                         </div>
                     </div>
