--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -88,7 +88,7 @@
                 </ui:fragment>
 
 
-            <li><p:commandLink action="#{sessionControl.logout}">
+            <li><p:commandLink id="menulogoutBtn" action="#{sessionControl.logout}">
                 <h:outputText value="Logout"/>
             </p:commandLink></li>
         </ul>
