--- a/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
+++ b/Invessence/modules/web/src/main/webapp/resources/citi/css/citiCustom.css
@@ -3115,7 +3115,7 @@ input {
 }
 
 .InfoNewDash > span:nth-child(2) {
-	background: #8476c0!important;
+	background: #0076C0!important;
 	color: #ffffff!important;
 	border-radius: 40px!important;
 	font-size: 13px;
@@ -3159,14 +3159,14 @@ border: 1px solid #9A9A9A !important;
 }
 
 .NBwidget > .ui-tabs-nav > li.ui-tabs-selected, .NBwidget > .ui-tabs-nav > li.ui-tabs-active, .NBwidget > .ui-tabs-nav > li.ui-state-hover {
-	background-color: #A4332F!important;
+	background-color: #0076c0!important;
 	border-radius: 2px 2px 0px 0px;
 	z-index: 1;
 }
 
 .NBwidget > .ui-tabs-nav > li.ui-tabs-selected::before, .NBwidget > .ui-tabs-nav > li.ui-tabs-active::before, .NBwidget > .ui-tabs-nav > li.ui-state-hover::before,
 .NBwidget .ui-tabs-nav li.ui-tabs-selected::after, .NBwidget .ui-tabs-nav li.ui-tabs-active::after, .NBwidget .ui-tabs-nav li.ui-state-hover::after {
-	border-bottom:28px solid #A4332F;
+	border-bottom:28px solid #0076c0;
 }
 
 .NBwidget > .ui-tabs-nav > li {
@@ -3189,7 +3189,7 @@ border: 1px solid #9A9A9A !important;
 	content: '';
 	width: 0;
 	height: 0;
-	border-bottom:28px solid #666666;
+	border-bottom:28px solid #323232;
 	transition: inherit;
 	position: absolute;
 }
@@ -3212,7 +3212,7 @@ border: 1px solid #9A9A9A !important;
 
 .NBwidget > .ui-tabs-nav > li {
 	border-radius: 2px 2px 0px 0px;
-	background-color: #666666;
+	background-color: #323232;
 }
 
 .NBwidget > .ui-tabs-nav > li::before
@@ -3237,7 +3237,7 @@ border: 1px solid #9A9A9A !important;
 
 .NBwidget > .ui-tabs-nav {
 	padding: 0.2em 7px 0!important;
-	border-bottom: 3px solid #a4332f;
+	border-bottom: 3px solid #0076c0;
 }
 
 /************************/
@@ -3723,7 +3723,7 @@ span > input {
 .innerBarUp3 {
 	width: 100%;
 	height: 50%;
-	background: #a4332f;
+	background: #D60000;
 }
 
 .innerBarDown1,
@@ -3731,7 +3731,7 @@ span > input {
 .innerBarDown3 {
 	width: 100%;
 	height: 50%;
-	background: #666666;
+	background: #323232;
 }
 
 .brTopLabel, .brBottomLabel {
@@ -4225,5 +4225,22 @@ padding: 10px 0px;
 }
 
 .ContentTitleDash, .ContentForTitleDash {
-	color: #0076C0!important;
+	color: #000000!important;
 }
+
+.ButtonConDashBlock {
+	color: #000000!important;
+}
+
+.fundBtn .ui-button-text {
+	background: #0076C0!important;
+}
+
+.openAcct .ui-button-text {
+	background: #D60000!important;
+}
+
+.positionBtn .ui-button-text {
+	background: #0076C0!important;
+}
+
