--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1396,3 +1396,173 @@ text-align: center;
 	    margin: 0 10px;
     font-size: 14px;
 }
+
+
+/**Asset**Workflow**/
+.awBlock {
+	height: 500px;
+	box-shadow: 1px 1px 3px grey;
+}
+
+.wfMainBlock {
+	padding: 0px 30px;
+	position: relative;
+	box-sizing: border-box;
+	top: 70px;
+}
+
+.iconPanel {
+	text-align: center;
+	padding-top: 30px;
+}
+
+.iconCircle {
+	width: 50px;
+	height: 50px;
+	margin: 0 auto;
+	border: 2px solid black;
+	border-radius: 50px;
+	padding: 15px;
+}
+
+.iconPanel img {
+	position: relative;
+	top: 5px;
+}
+
+.titleLabelPanel {
+	margin: 20px 15px;
+}
+
+.tLabel {
+	border-bottom: 1px solid #d4d3d3;
+	padding-bottom: 5px;
+	font-weight: bold;
+}
+
+.titleContentPanel {
+	padding: 20px 15px;
+}
+
+.tcLabel {
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.contentSecond {
+	margin: 20px 0px;
+}
+
+.awbtnBlock {
+	margin: 20px 50px;
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	left: 0px;
+}
+
+.awbtnBlock2 {
+	margin: 20px 50px;
+	position: absolute;
+	bottom: 40px;
+	right: 0px;
+	left: 0px;
+}
+
+.awBtn {
+	background: #009abb;
+	text-align: center;
+	font-size: 14px;
+	padding: 0px 0px;
+	color: #ffffff;
+	letter-spacing: 1px;
+	border-radius: 0px;
+	box-shadow: 1px 1px 3px #c5c5c5;
+}
+
+.awBtn > span,
+.awBtn.ui-state-hover > span,
+.awBtn.ui-state-focus > span {
+	background: #009abb!important;
+	border-radius: 0px;
+}
+
+
+.awCloseBtn > span,
+.awCloseBtn.ui-state-hover > span,
+.awCloseBtn.ui-state-focus > span {
+	background: red!important;
+	border-radius: 0px;
+}
+
+.awCloseBtn {
+	text-align: center;
+	font-size: 14px;
+	padding: 0px 0px;
+	color: #ffffff;
+	letter-spacing: 1px;
+	border-radius: 0px;
+	box-shadow: 1px 1px 3px #c5c5c5;
+}
+
+
+.awUploadInput > span{
+	width: 100%!important;
+	border-radius: 0px!important;
+}
+
+.awUploadInput > .ui-state-default .ui-button-text,
+.awUploadInput > .ui-state-hover .ui-button-text,
+.awUploadInput > .ui-state-focus .ui-button-text {
+	border-radius: 0px!important;
+	background: #009abb;
+}
+
+.awUploadInput .ui-fileupload-filename {
+	font-size: 13px;
+	list-style-position: inside;
+	display: list-item;
+}
+
+.downloadList {
+	background: #fbfbfb;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	margin: 0 30px;
+	z-index: 200;
+}
+
+.reviewBlock {
+	position: absolute;
+	background: #f7f7f7;
+	top: 100px;
+	bottom: 10px;
+	left: 10px;
+	right: 10px;
+	z-index: 200;
+}
+
+.centerPanel {
+	text-align: center;
+}
+
+.awbtnBlocklist {
+	margin: 20px 20px;
+	position: absolute;
+	bottom: 0px;
+	right: 0px;
+	left: 0px;
+	text-align: center;
+}
+
+.awbtnBlockRB {
+	margin: 20px 30px;
+	position: absolute;
+	right: 0px;
+	left: 0px;
+	top: -70px;
+}
+
