Prashant 05/01/2017 -Latest code for Citi testing

--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layout.xhtml
@@ -33,7 +33,7 @@
             Template
         </ui:insert>
 
-      <!-- <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
+      <div class="layout-portlets-box TexAlCenter" style="font-size: 13px;">
            <ui:fragment rendered="#{webutil.hasSSL}">
                 <div class="layout-portlets-box TexAlCenter" style="border-radius:0;">
                     <div class="ShowOnDesktopTablet">
@@ -44,8 +44,10 @@
                 </div>
             </ui:fragment>
             Powered by Invessence<sup class="Fs9">SM</sup><br/>
-            #{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.
-        </div>-->
+            <!--#{webutil.webprofile.companyname}<sup class="Fs9">TM</sup> - All rights reserved.-->
+          <script type="text/javascript" src="https://integratedchat.teamviewer.com/widget"></script>
+        </div>
+
         <div class="layout-portlets-box footerContext">
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent"><div id="ceForm:j_idt277" class="ui-outputpanel ui-widget">
@@ -64,6 +66,7 @@
             </div>
         </div>
     </div>
+
 
     <h:outputStylesheet name="css/core-layout.css" library="invessence-layout"/>
     <h:outputStylesheet name="css/custom.css" library="invessence-layout"/>
