--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/layoutmenuHeader.xhtml
@@ -5,90 +5,146 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
     <h:outputScript name="js/jquery.url.js"
-                    library="#{uiLayout.webProfile.cssdir}" />
-<script>
-    $(document).ready(function(){
-            $('.MobileButton').click(function(){
-                $('.menuBtnLinks').fadeIn();
-            });
+                    library="#{uiLayout.webProfile.cssdir}"/>
+    <script>
+        $(document).ready(function ()
+                          {
+                              $('.MobileButton').click(function ()
+                                                       {
+                                                           $('.menuBtnLinks').fadeIn();
+                                                       });
 
-            $('.menuBtnLinks').mouseleave(function(){
-                $('.menuBtnLinks').fadeOut();
-            });
-        });
+                              $('.menuBtnLinks').mouseleave(function ()
+                                                            {
+                                                                $('.menuBtnLinks').fadeOut();
+                                                            });
+                          });
 
 
-    $(function(){
-        $page = jQuery.url.attr("file");
+        $(function ()
+          {
+              $page = jQuery.url.attr("file");
 
-        $('#dashboardMenuHighlight').each(function(){
-            if ( ($page == 'index.xhtml')) {
-                $(this).addClass('mbSelected');
-            } else {
-                $(this).removeClass('mbSelected');
-            }
-        });
-        $('#newaccountMenuHighlight').each(function(){
-            if ( ($page == 'cadd.xhtml')) {
-                $(this).addClass('mbSelected');
-            } else {
-                $(this).removeClass('mbSelected');
-            }
-        });
-        $('#myprofileMenuHighlight').each(function(){
-            if ( ($page == 'myprofile.xhtml')) {
-                $(this).addClass('mbSelected');
-            } else {
-                $(this).removeClass('mbSelected');
-            }
-        });
-        $('#tradeMenuHighlight').each(function(){
-            if ( ($page == 'trade.xhtml')) {
-                $(this).addClass('mbSelected');
-            } else {
-                $(this).removeClass('mbSelected');
-            }
-        });
+              $('#dashboardMenuHighlight').each(function ()
+                                                {
+                                                    if (($page == 'index.xhtml'))
+                                                    {
+                                                        $(this).addClass('mbSelected');
+                                                    }
+                                                    else
+                                                    {
+                                                        $(this).removeClass('mbSelected');
+                                                    }
+                                                });
+              $('#newaccountMenuHighlight').each(function ()
+                                                 {
+                                                     if (($page == 'cadd.xhtml'))
+                                                     {
+                                                         $(this).addClass('mbSelected');
+                                                     }
+                                                     else
+                                                     {
+                                                         $(this).removeClass('mbSelected');
+                                                     }
+                                                 });
+              $('#myprofileMenuHighlight').each(function ()
+                                                {
+                                                    if (($page == 'myprofile.xhtml'))
+                                                    {
+                                                        $(this).addClass('mbSelected');
+                                                    }
+                                                    else
+                                                    {
+                                                        $(this).removeClass('mbSelected');
+                                                    }
+                                                });
+              $('#tradeMenuHighlight').each(function ()
+                                            {
+                                                if (($page == 'trade.xhtml'))
+                                                {
+                                                    $(this).addClass('mbSelected');
+                                                }
+                                                else
+                                                {
+                                                    $(this).removeClass('mbSelected');
+                                                }
+                                            });
+              $('#aggrMenuHighlight').each(function ()
+                                           {
+                                               if (($page == 'widget.xhtml'))
+                                               {
+                                                   $(this).addClass('mbSelected');
+                                               }
+                                               else
+                                               {
+                                                   $(this).removeClass('mbSelected');
+                                               }
+                                           });
+              $('#modelMenuHighlight').each(function ()
+                                            {
+                                                if (($page == 'assetworkflow.xhtml'))
+                                                {
+                                                    $(this).addClass('mbSelected');
+                                                }
+                                                else
+                                                {
+                                                    $(this).removeClass('mbSelected');
+                                                }
+                                            });
 
-    });
-</script>
+          });
+    </script>
     <div class="Wid60 Fright menuButtons">
-    <ul class="MobileButton">
-    <li class="fa fa-bars"></li>
-    </ul>
+        <ul class="MobileButton">
+            <li class="fa fa-bars"></li>
+        </ul>
         <ul id="menuMainNavigation" class="menuBtnLinks">
             <li id="dashboardMenuHighlight">
                 <a href="#{uiLayout.defaultHome}" id="menudashboardbtn">Dashboard</a>
             </li>
 
             <ui:fragment rendered="#{webutil.hasAccess('USER')}">
-            <li id="newaccountMenuHighlight">
-                <p:commandLink rendered="true" id="menunewacctbtn"
-                               actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}">
-                    <h:outputText value="New Account"/>
-                </p:commandLink>
+                <li id="newaccountMenuHighlight">
+                    <p:commandLink rendered="true" id="menunewacctbtn"
+                                   actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}">
+                        <h:outputText value="New Account"/>
+                    </p:commandLink>
                 </li>
-                </ui:fragment>
-                <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
-                    <li id="tradeMenuHighlight">
+            </ui:fragment>
+            <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
+                <li id="tradeMenuHighlight">
                     <a href="/pages/advisor/trade.xhtml" id="menutradebtn">Trade</a>
-                    </li>
-                        </ui:fragment>
+                </li>
+            </ui:fragment>
 
+            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+                <li id="aggrMenuHighlight">
+                    <p:commandLink rendered="true" id="menuaggrbtn"
+                                   actionListener="#{aggrBean.startup('D')}">
+                        <h:outputText value="Aggregation"/>
+                    </p:commandLink>
+                </li>
+            </ui:fragment>
 
-                <ui:fragment rendered="#{webutil.hasAccess('ADVISOR')}">
-                    <li id="myprofileMenuHighlight">
-                    <a href="/pages/common/myprofile.xhtml" id="menumyprofilebtn">My Profile</a>
-                    </li>
-                </ui:fragment>
-                <ui:fragment rendered="#{! webutil.hasAccess('ADVISOR')}">
-                    <li id="myprofileMenuHighlight">
-                    <a href="/pages/common/myprofile.xhtml" id="menumyprofilebtn">My Profile</a>
-                    </li>
-                </ui:fragment>
+            <ui:fragment rendered="#{webutil.hasRole('USER')}">
+                <li id="modelMenuHighlight">
+                    <a href="/pages/advisor/assetworkflow.xhtml" id="menutradebtn">Model</a>
+                </li>
+            </ui:fragment>
 
+            <ui:fragment rendered="#{webutil.hasRole('DEMO')}">
+            <li id="newaccountMenuHighlight">
+                <p:commandLink rendered="true" id="menureportsbtn"
+                               actionListener="#{uiLayout.doMenuAction('consumer', 'creports.xhtml')}">
+                    <h:outputText value="Reports"/>
+                </p:commandLink>
+            </li>
+            </ui:fragment>
 
-            <li><p:commandLink id="menulogoutBtn" action="#{sessionControl.logout}">
+            <li id="myprofileMenuHighlight">
+                <a href="/pages/common/myprofile.xhtml" id="menumyprofilebtn">My Profile</a>
+            </li>
+            <li><p:commandLink id="menulogoutBtn" actionListener="#{sessionControl.logout}">
                 <h:outputText value="Logout"/>
             </p:commandLink></li>
         </ul>
