--- a/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/invessence/contactHeader.xhtml
@@ -11,6 +11,11 @@
             <span class="bussinessContact Fright">
                 <p:outputText value="#{webutil.webprofile.supportInfo}"
                               rendered="#{webutil.webprofile.hasBusinessContact}"/>
+            <ui:fragment rendered="#{webutil.hasAccess('USER')}">
+                <a class="Animated05 CursPointer" href="http://www.teamviewer.com/link/?url=505374&amp;id=35279493">
+                    <i class="fa fa-question-circle"></i> Help Desk<i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i>
+                </a>
+            </ui:fragment>
             </span>
         </div>
     </div>
